remove Header; fix spacing on index

--- a/src/Index/Index.scss
+++ b/src/Index/Index.scss
@@ -2,14 +2,28 @@
 
 .index {
   h1 {
-    font-size: 80px;
+    font-size: $h1-font-size;
     margin: 0;
   }
 
   .btn {
     font-size: $h3-font-size;
+    height: calc(1.9 * $h3-font-size);
+    // For vertical alignment of the words
     display: flex;
     justify-content: center;
     align-items: center;
+  }
+
+  // // Any class containing "col-" (via https://stackoverflow.com/questions/38763789/sass-class-name-wildcard/38764939#38764939)
+  div[class*="col-"] {
+    text-align: center;
+    padding: 0.7em;
+
+    * {
+      width: 100%;
+      padding: 0;
+      margin: 0;
+    }
   }
 }
